changement + page produit + fin du site

--- a/presentation.html
+++ b/presentation.html
@@ -47,7 +47,7 @@
                     >
                   </li>
                   <li class="list__item">
-                    <a href="#" class="list__link">Nos produits</a>
+                    <a href="./produit.html" class="list__link">Nos produits</a>
                   </li>
                   <li class="list__item">
                     <a href="./contact.htm" class="list__link">Contact</a>
@@ -75,7 +75,7 @@
                   >
                 </li>
                 <li class="list__item">
-                  <a href="#" class="list__link">Nos produits</a>
+                  <a href="./produit.html" class="list__link">Nos produits</a>
                 </li>
                 <li class="list__item">
                   <a href="./contact.htm" class="list__link">Contact</a>
@@ -267,7 +267,7 @@
                     <a href="./presentation.html" class="page__link footer__text">Présentation</a>
                   </li>
                   <li class="page__item">
-                    <a href="#" class="page__link footer__text">Nos produits</a>
+                    <a href="./produit.html" class="page__link footer__text">Nos produits</a>
                   </li>
                   <li class="page__item">
                     <a href="#" class="page__link footer__text"
