--- a/produit.html
+++ b/produit.html
@@ -38,7 +38,9 @@
                     <a href="./index.html" class="list__link">Accueil</a>
                   </li>
                   <li class="list__item">
-                    <a href="./presentation.html" class="list__link">Présentation</a>
+                    <a href="./presentation.html" class="list__link"
+                      >Présentation</a
+                    >
                   </li>
                   <li class="list__item logo-hidden-medium">
                     <a href="./index.html" class="list__link logo"
@@ -47,7 +49,9 @@
                     >
                   </li>
                   <li class="list__item">
-                    <a href="./produit.html" class="list__link active">Nos produits</a>
+                    <a href="./produit.html" class="list__link active"
+                      >Nos produits</a
+                    >
                   </li>
                   <li class="list__item">
                     <a href="./contact.htm" class="list__link">Contact</a>
@@ -66,16 +70,20 @@
                   <a href="./index.html" class="list__link">Accueil</a>
                 </li>
                 <li class="list__item">
-                  <a href="./presentation.html" class="list__link">Présentation</a>
+                  <a href="./presentation.html" class="list__link"
+                    >Présentation</a
+                  >
                 </li>
                 <li class="list__item logo-hidden-medium">
-                  <a href="./index.html" class="list__link logo"
+                  <a href="index.html" class="list__link logo"
                     >boulangerie patisserie
                     <span class="span__logo">victor hugo</span></a
                   >
                 </li>
                 <li class="list__item">
-                  <a href="./produit.html" class="list__link active">Nos produits</a>
+                  <a href="./produit.html" class="list__link active"
+                    >Nos produits</a
+                  >
                 </li>
                 <li class="list__item">
                   <a href="./contact.htm" class="list__link">Contact</a>
@@ -88,130 +96,91 @@
     </header>
     <div class="header__banner">
       <div class="header__content">
-        <h3 class="header__content--title">Nos pains</h3>
-        <p class="header__content--text">Produits fait sur place</p>
+        <h3 class="header__content--title">Nos produits</h3>
+        <p class="header__content--text">Produits artisanaux fait sur place</p>
       </div>
     </div>
-    <div class="pain">
+    <div class="produit">
       <div class="container">
-        <div class="pain__text">
-          <p class="pain__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed morbi
-            sed purus sodales pellentesque velit aliquet. Dolor, diam id
-            commodo, commodo fermentum, in sit. Sit neque lobortis turpis
-            euismod. A gravida dui, nullam cursus cursus. Proin molestie
-            facilisis velit pharetra purus. Tortor pellentesque in odio
-            fermentum ac in eget mi proin. Accumsan risus urna molestie rhoncus.
-            Pellentesque aliquam duis sapien, facilisis odio..
-          </p>
-        </div>
-        <div class="pain__content">
-          <div class="pain__content--description">
-            <div class="pain__content--img">
+        <div class="produit__content">
+          <div class="produit__content--box">
+            <div class="produit__content--img">
               <img
-                src="./img/produits/pains/bread-2436370_640 3.jpg"
+                src="./img/produits/product/bread-399286_640.jpg"
                 alt="pain"
-                class="pain__img"
+                class="produit__img"
               />
             </div>
-            <div class="pain__description--text">
-              <p class="pain__content--text">Baguette</p>
+            <div class="produit__content--text">
+              <h2 class="produit__title">les pains</h2>
+              <p class="produit__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+                massa eget ligula in adipiscing nisi adipiscing. Nunc at
+                scelerisque libero, dictum ipsum pharetra
+              </p>
+              <div class="produit__btn">
+                <a href="#" class="btn btn__produit">voir plus</a>
+              </div>
             </div>
           </div>
-          <div class="pain__content--description">
-            <div class="pain__content--img">
+          <div class="produit__content--box">
+            <div class="produit__content--img option">
               <img
-                src="./img/produits/pains/bread-2436370_640 3.jpg"
-                alt="pain"
-                class="pain__img"
+                src="./img/produits/product/bread-1284438_640.jpg"
+                alt="viennoiserie"
+                class="produit__img"
               />
             </div>
-            <div class="pain__description--text">
-              <p class="pain__content--text">Tradition</p>
+            <div class="produit__content--text choise">
+              <h2 class="produit__title">les viennoiseries</h2>
+              <p class="produit__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+                massa eget ligula in adipiscing nisi adipiscing. Nunc at
+                scelerisque libero, dictum ipsum pharetra
+              </p>
+              <div class="produit__btn">
+                <a href="#" class="btn btn__produit">voir plus</a>
+              </div>
             </div>
           </div>
-          <div class="pain__content--description">
-            <div class="pain__content--img">
+          <div class="produit__content--box">
+            <div class="produit__content--img">
               <img
-                src="./img/produits/pains/bread-2436370_640 3.jpg"
-                alt="pain"
-                class="pain__img"
+                src="./img/produits/product/raspberry-tarts-921009_640.jpg"
+                alt="patisserie"
+                class="produit__img"
               />
             </div>
-            <div class="pain__description--text">
-              <p class="pain__content--text">Pain aux céréales</p>
+            <div class="produit__content--text">
+              <h2 class="produit__title">les patisserie</h2>
+              <p class="produit__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+                massa eget ligula in adipiscing nisi adipiscing. Nunc at
+                scelerisque libero, dictum ipsum pharetra
+              </p>
+              <div class="produit__btn">
+                <a href="#" class="btn btn__produit">voir plus</a>
+              </div>
             </div>
           </div>
-          <div class="pain__content--description">
-            <div class="pain__content--img">
+          <div class="produit__content--box">
+            <div class="produit__content--img option">
               <img
-                src="./img/produits/pains/bread-2436370_640 3.jpg"
+                src="./img/produits/product/sandwich-691875_640.jpg"
                 alt="pain"
-                class="pain__img"
+                class="produit__img"
               />
             </div>
-            <div class="pain__description--text">
-              <p class="pain__content--text">Pain de campagne</p>
-            </div>
-          </div>
-          <div class="pain__content--description">
-            <div class="pain__content--img">
-              <img
-                src="./img/produits/pains/bread-2436370_640 3.jpg"
-                alt="pain"
-                class="pain__img"
-              />
-            </div>
-            <div class="pain__description--text">
-              <p class="pain__content--text">Pain bucheron</p>
-            </div>
-          </div>
-          <div class="pain__content--description">
-            <div class="pain__content--img">
-              <img
-                src="./img/produits/pains/bread-2436370_640 3.jpg"
-                alt="pain"
-                class="pain__img"
-              />
-            </div>
-            <div class="pain__description--text">
-              <p class="pain__content--text">Pain de maïs</p>
-            </div>
-          </div>
-          <div class="pain__content--description">
-            <div class="pain__content--img">
-              <img
-                src="./img/produits/pains/bread-2436370_640 3.jpg"
-                alt="pain"
-                class="pain__img"
-              />
-            </div>
-            <div class="pain__description--text">
-              <p class="pain__content--text">Pain de sègle</p>
-            </div>
-          </div>
-          <div class="pain__content--description">
-            <div class="pain__content--img">
-              <img
-                src="./img/produits/pains/bread-2436370_640 3.jpg"
-                alt="pain"
-                class="pain__img"
-              />
-            </div>
-            <div class="pain__description--text">
-              <p class="pain__content--text">Pain complet</p>
-            </div>
-          </div>
-          <div class="pain__content--description">
-            <div class="pain__content--img">
-              <img
-                src="./img/produits/pains/bread-2436370_640 3.jpg"
-                alt="pain"
-                class="pain__img"
-              />
-            </div>
-            <div class="pain__description--text">
-              <p class="pain__content--text">Pains spéciaux</p>
+            <div class="produit__content--text choise">
+              <h2 class="produit__title">les snacking</h2>
+              <p class="produit__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+                massa eget ligula in adipiscing nisi adipiscing. Nunc at
+                scelerisque libero, dictum ipsum pharetra
+              </p>
+              <div class="produit__btn">
+                <a href="#" class="btn btn__produit">voir plus</a>
+              </div>
             </div>
           </div>
         </div>
@@ -226,13 +195,21 @@
                 <h3 class="footer__title page__title">Pages</h3>
                 <ul class="footer__list">
                   <li class="page__item">
-                    <a href="./index.html" class="page__link footer__text">Accueil</a>
+                    <a href="./index.html" class="page__link footer__text"
+                      >Accueil</a
+                    >
                   </li>
                   <li class="page__item">
-                    <a href="./presentation.html" class="page__link footer__text">Présentation</a>
+                    <a
+                      href="./presentation.html"
+                      class="page__link footer__text"
+                      >Présentation</a
+                    >
                   </li>
                   <li class="page__item">
-                    <a href="./produit.html" class="page__link footer__text">Nos produits</a>
+                    <a href="./produit.html" class="page__link footer__text"
+                      >Nos produits</a
+                    >
                   </li>
                   <li class="page__item">
                     <a href="#" class="page__link footer__text"
