--- a/contact.htm
+++ b/contact.htm
@@ -49,7 +49,7 @@
                     >
                   </li>
                   <li class="list__item">
-                    <a href="#" class="list__link">Nos produits</a>
+                    <a href="./produit.html" class="list__link">Nos produits</a>
                   </li>
                   <li class="list__item">
                     <a href="./contact.htm" class="list__link active"
@@ -75,13 +75,13 @@
                   >
                 </li>
                 <li class="list__item logo-hidden-medium">
-                  <a href="index.html" class="list__link logo"
+                  <a href="./index.html" class="list__link logo"
                     >boulangerie patisserie
                     <span class="span__logo">victor hugo</span></a
                   >
                 </li>
                 <li class="list__item">
-                  <a href="#" class="list__link">Nos produits</a>
+                  <a href="./produit.html" class="list__link">Nos produits</a>
                 </li>
                 <li class="list__item">
                   <a href="./contact.htm" class="list__link active">Contact</a>
@@ -244,7 +244,7 @@
                     >
                   </li>
                   <li class="page__item">
-                    <a href="#" class="page__link footer__text">Nos produits</a>
+                    <a href="./produit.html" class="page__link footer__text">Nos produits</a>
                   </li>
                   <li class="page__item">
                     <a href="#" class="page__link footer__text"
